name:           typedflow
version:        0.9
category:       Deep Learning
synopsis:       Typed frontend to TensorFlow and higher-order deep learning
description: TypedFlow is a typed, higher-order frontend to TensorFlow and a high-level library for deep-learning.
             .
             The main design principles are:
             .
               - To make the parameters of layers explicit. This choice makes sharing of parameters explicit and allows to implement "layers" as pure functions.
             .
               - To provide as precise as possible types. Functions are explicit about the shapes and elements of the tensors that they manipulate (they are often polymorphic in shapes and elements though.)
             .
               - To let combinators be as transparent as possible. If a NN layers is a simple tensor transformation it will be exposed as such.
license:        LGPL-3
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jean-philippe.bernardy@gu.se
Cabal-Version:  >= 1.12
build-type:     Simple
source-repository head
  type:     git
  location: git@github.com:GU-CLASP/TypedFlow.git

library
  default-language: Haskell2010
  build-depends:
    base==4.*,
    ghc-typelits-knownnat,
    pretty-compact,
    mtl

  exposed-modules:
       TypedFlow,
       TypedFlow.Layers,
       TypedFlow.Layers.Core,
       TypedFlow.Layers.RNN,
       TypedFlow.Learn,
       TypedFlow.TF,
       TypedFlow.Types